	Fixed bug where enter inside an editable element inside an non editable element would split the element.
	Fixed bug where cut/copy/paste of noneditable elements didn't work.
	Fixed bug where backspace would sometimes produce font elements on WebKit.
	Fixed bug where IE9 wouldn't properly update image styles when images where resized.
Version 3.5b2 (2012-03-15)
	Rewrote the enter key logic to normalize browser behavior.
	Fixed so enter within PRE elements produces a BR and shift+enter breaks/end the PRE. Can be disabled using the br_in_pre option.
	Fixed bug where the selection wouldn't be correct after applying formatting and having the caret at the end of the new format node.
	Fixed bug where the noneditable plugin would process contents on raw input calls for example on undo/redo calls.
	Fixed bug where WebKit could produce an exception when a bookmark was requested when there wasn't a proper selection.
	Fixed bug where WebKit would fail to open the image dialog since it would be returning false for a class name instead of a string.
	Fixed so alignment and indentation works properly when forced_root_blocks is set to false. It will produce a DIV by default.
Version 3.5b1 (2012-03-08)
	Added new event class that is faster and enables support for faking events.
	Added new self_closing_elements, short_ended_elements, boolean_attributes, non_empty_elements and block_elements options to control the HTML Schema.
	Added new schema option and support for the HTML5 schema.
	Added new visualblocks plugin that shows html5 blocks with visual borders.
	Added new types and selector options to make it easier to create editor instances with different configs.
	Added new preview of formatting options in various listboxes.
	Added new preview_styles option that enables control over what gets previewed.
	Fixed bug where content css would be loaded twice into iframe. 
	Fixed bug where start elements with only whitespace in the attribute part wouldn't be correctly parsed.