@@ -5,6 +5,7 @@ Version 3.5b3 (2012-03-xx)
 	Fixed bug where cut/copy/paste of noneditable elements didn't work.
 	Fixed bug where backspace would sometimes produce font elements on WebKit.
 	Fixed bug where IE9 wouldn't properly update image styles when images where resized.
+	Fixed bug where drag/drop of noneditable elements didn't work correctly.
 Version 3.5b2 (2012-03-15)
 	Rewrote the enter key logic to normalize browser behavior.
 	Fixed so enter within PRE elements produces a BR and shift+enter breaks/end the PRE. Can be disabled using the br_in_pre option.
